# chrisdone-homepage

./: .gitignore  chrisdone-homepage.cabal
css/: default.css
numbergeddon/: README  index.html  numbergeddon.css  numbergeddon.js
posts/: 12-years-a-slave.markdown  a-clockwork-orange.markdown  amb-list-monad.markdown  attempto-controlled-english.markdown  because-linguistics.markdown  beers.markdown  blackout.markdown  blog-comments.markdown  boycott-head.markdown  cabal-install-hacking.markdown  camelcase-vs-underscores-vs-hyphens.markdown  codepad.markdown  common-lisp-haskell.markdown  concept-for-editing-asts-rather-than-text.markdown  control-of-my-data.markdown  crash-ie8.markdown  currying-vs-partial-application.markdown  darcs.markdown  data-typeable.markdown  days-of-the-week.markdown  deoderant.markdown  dijkstra-haskell-java.markdown  dot-emacs.markdown  duck-typing-in-haskell.markdown  emacs-haskell-installed-packages.markdown  emacs-key-analysis.markdown  emacs-mail.markdown  emacs-users-are-like-igor.markdown  esqueleto-haskelldb.markdown  favourite-comedians.markdown  fay.markdown  flo-flow-diagrams-from-your-codebase.markdown  formatting.markdown  fsf-stallman-interview-jupiter.markdown  functional-programming-is-hard.markdown  generic-map.markdown  ghc-upgrade.markdown  ghci-debugger.markdown  ghci-reload.markdown  ghcjs.markdown  (+89 more)
src/: Main.hs
templates/: default.html  index.html  post.html  posts.html
z/: index.html
